# SkySkimmer

./: .env.example  .gitignore  Dockerfile  README.md  mypy_fix.py  pyproject.toml
config/: routes.yaml
docs/: ARCHITECTURE.md
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/contracts/: __init__.py  tequila.py
src/domain/: __init__.py  models.py
src/services/: __init__.py  dispatcher.py  flight_adapter.py  flight_evaluator.py  flight_fetcher.py  state_store.py
src/utils/: __init__.py  logger.py
tests/: test_settings.py
