[tool.poetry]
name = "skyskimmer"
version = "0.1.0"
description = "Cloud-native flight pricing engine for custom itinerary tracking"
authors = ["ErishMan"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
tenacity = "^8.3.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
loguru = "^0.7.2"
APScheduler = "^3.10.4"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
supabase = "^2.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-PyYAML = "^6.0.12"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
